[package]
name = "ina260_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
# For generic Linux I2C device access (e.g., /dev/i2c-1)
# i2cdev = "0.5"

# For parsing command-line arguments
clap = { version = "4.5", features = ["derive"] }
# For Prometheus metrics
prometheus = "0.13"
lazy_static = "1.4" # Required for global static Prometheus collectors
# For the HTTP server to expose metrics
warp = "0.3"
tokio = { version = "1.37", features = ["full"] } # Asynchronous runtime for warp
# For logging
log = "0.4"
env_logger = "0.11"
# For Big-Endian byte order manipulation
byteorder = "1.5"
# For retrieving the system hostname
hostname = "0.3"
# For simplified error handling
anyhow = "1.0"
i2cdev = "0.6.1"
