[package]
name = "ina260_exporter"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
prometheus = "0.13"
lazy_static = "1.4" # Required for global static Prometheus collectors
warp = "0.3"
tokio = { version = "1.37", features = ["full"] } # Asynchronous runtime for warp
log = "0.4"
env_logger = "0.11"
byteorder = "1.5"
hostname = "0.3"
anyhow = "1.0"
i2cdev = "0.6.1"
